objects/TM_Buildout__c.object
<CustomObject>
    <fields>
        <fullName>A_First_touch_call_email__c</fullName>
        <label>a.First touch (call/email)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>TM_Buildout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Add_Verify_Billing_Address__c</fullName>
        <label>a.Add/Verify Billing Address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Add_Verify_Service_Fee__c</fullName>
        <label>a.Add/Verify Service Fee</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Allow_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CS_Rep_Assigned__c</fullName>
        <label>CS Rep Assigned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Launch_Date__c</fullName>
        <label>a.Client Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>TM_Buildout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contacts_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contacts Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Client_in_TM__c</fullName>
        <label>a.Create Client in TM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Events__c</fullName>
        <label>a.Create Events</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Send_Embed_Code__c</fullName>
        <label>a.Create &amp; Send Embed Code</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Design_Approved__c</fullName>
        <label>a.Design Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dont_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dont Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Equipment_Training__c</fullName>
        <label>a.Equipment Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>a.First Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FB_Integration__c</fullName>
        <label>a.FB Integration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Event_Live_Date__c</fullName>
        <label>a.First Event Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Level_of_Effort__c</fullName>
        <label>Level of Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Simple</fullName>
                </value>
                <value>
                    <fullName>Advanced</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Merchant_A_C_Setup_Date__c</fullName>
        <label>a.Merchant A/C Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Merchant_Gateway__c</fullName>
        <label>Merchant Gateway</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Authorize.Net</fullName>
                </value>
                <value>
                    <fullName>CardFlex</fullName>
                </value>
                <value>
                    <fullName>Cybersource</fullName>
                </value>
                <value>
                    <fullName>Elavon Internet Secure</fullName>
                </value>
                <value>
                    <fullName>FirstDate</fullName>
                </value>
                <value>
                    <fullName>FroogalPay</fullName>
                </value>
                <value>
                    <fullName>Laughstub</fullName>
                </value>
                <value>
                    <fullName>Payflow Pro/Verisign</fullName>
                </value>
                <value>
                    <fullName>PaymentTech</fullName>
                </value>
                <value>
                    <fullName>Paypal</fullName>
                </value>
                <value>
                    <fullName>Stripe</fullName>
                </value>
                <value>
                    <fullName>TicketMob</fullName>
                </value>
                <value>
                    <fullName>Tunestub</fullName>
                </value>
                <value>
                    <fullName>USA ePay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>TM_Buildout</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSP</label>
        <referenceTo>Professional_Services_Project__c</referenceTo>
        <relationshipLabel>TM Onboarding</relationshipLabel>
        <relationshipName>TM_Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>P_Add_Verify_Billing_Address__c</fullName>
        <label>p.Add/Verify Billing Address</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Add_Verify_Service_Fee__c</fullName>
        <label>p.Add/Verify Service Fee</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Client_Launch_Date__c</fullName>
        <label>p.Client Launch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Create_Client_in_TM__c</fullName>
        <label>p.Create Client in TM</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Create_Events__c</fullName>
        <label>p.Create Events</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Create_Send_Embed_Code__c</fullName>
        <label>p.Create &amp; Send Embed Code</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Designed_Approved__c</fullName>
        <label>p.Design Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Equipment_Training__c</fullName>
        <label>p.Equipment Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Event_Date__c</fullName>
        <label>p.First Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_FB_Integration__c</fullName>
        <label>p.FB Integration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_First_Event_Live_Date__c</fullName>
        <label>p.First Event Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Import_Previous_TB_Data__c</fullName>
        <label>p.Import Previous TB Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Merchant_A_C_Setup_Date__c</fullName>
        <label>p.Merchant A/C Setup Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Q_A_Testing__c</fullName>
        <label>p.Q/A Testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Sent_to_Client_for_Approval__c</fullName>
        <label>p.Sent to Client for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Site_Design_Completion_Date__c</fullName>
        <label>p.Site Design Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Site_Design__c</fullName>
        <label>p.Site Design</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Test_Transaction__c</fullName>
        <label>p.Test Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Verify_Deposit__c</fullName>
        <label>p.Verify Deposit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P_Walkthrough_Training__c</fullName>
        <label>p.Walkthrough &amp; Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Q_A_Testing__c</fullName>
        <label>a.Q/A Testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_to_Client_for_Approval__c</fullName>
        <label>a.Sent to Client for Approval</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Design_Completion_Date__c</fullName>
        <label>a.Site Design Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Design__c</fullName>
        <label>a.Site Design</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Work in Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Invitation_Sent__c</fullName>
        <label>Survey Invitation Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_Transaction__c</fullName>
        <label>a.Test Transaction</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_Total__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Time Total</label>
        <referenceTo>WorkIt2__Case_Time_Total__c</referenceTo>
        <relationshipLabel>TM Onboarding</relationshipLabel>
        <relationshipName>TM_Onboarding</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Time_in_Minutes__c</fullName>
        <formula>Time_Total__r.WorkIt2__Time_In_Minutes__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time in Minutes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verify_Deposit__c</fullName>
        <label>a.Verify Deposit</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Walkthrough_Training__c</fullName>
        <label>a.Walkthrough &amp; Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Collect_W9__c</fullName>
        <label>a.Collect W9</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Designed_Approved__c</fullName>
        <label>a.Designed Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Equipment_Request_Form_Sent__c</fullName>
        <label>a. Equipment Request Form Sent?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Go_Live_Date__c</fullName>
        <label>a.Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Import_Previous_TB_Data__c</fullName>
        <label>a.Import Previous TB Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Integration_Approved_by_Client__c</fullName>
        <label>a.Integration Approved by Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Receive_Content_From_Client__c</fullName>
        <label>a.Receive Content From Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Return_Website_Questionnaire__c</fullName>
        <label>a.Return Website Questionnaire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Verify_Gateway_Info__c</fullName>
        <label>a.Verify Gateway Info</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Website_Built__c</fullName>
        <label>a.Website Built</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>a_Website_Launch_Switch_Date__c</fullName>
        <label>a.Website Launch/Switch Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>p_Collect_W9__c</fullName>
        <label>p.Collect W9</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>p_Equipment_Request_Form_Sent__c</fullName>
        <label>p. Equipment Request Form Sent?</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>p_First_Touch_call_email__c</fullName>
        <label>p.First Touch (call/email)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>p_Go_Live_Date__c</fullName>
        <label>p.Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>p_Integration_Approved_by_Client__c</fullName>
        <label>p.Integration Approved by Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>p_Receive_Content_From_Client__c</fullName>
        <label>p.Receive Content From Client</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>p_Return_Website_Questionnaire__c</fullName>
        <label>p.Return Website Questionnaire</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>p_Verify_Gateway_Info__c</fullName>
        <label>p.Verify Gateway Info</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>p_Website_Built__c</fullName>
        <label>p.Website Built</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>p_Website_Launch_Switch_Date__c</fullName>
        <label>p.Website Launch/Switch Date</label>
        <type>Date</type>
    </fields>
    <label>TM Onboarding</label>
    <nameField>
        <label>TM Onboarding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TM Onboarding</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>Full_Website</fullName>
        <active>true</active>
        <label>Full Website</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integrations</fullName>
        <active>true</active>
        <label>Integrations</label>
    </recordTypes>
    <recordTypes>
        <fullName>Selling_on_Communities</fullName>
        <active>true</active>
        <label>Shopping Cart</label>
    </recordTypes>
    <validationRules>
        <fullName>Level_of_effort_for_Go_Live_Date</fullName>
        <active>true</active>
        <description>Level of effort is mandatory when Go Live Date is entered</description>
        <errorConditionFormula>AND( 
CONTAINS($Profile.Name,"Customer Care"), 
NOT(ISBLANK(p_Go_Live_Date__c)), 
ISPICKVAL(Level_of_Effort__c,"") 
)</errorConditionFormula>
        <errorMessage>Please enter Level of Effort</errorMessage>
    </validationRules>
</CustomObject>